--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Matt.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="male-user.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Matt Murphree</p>
+					<p class="text-name">Chris Schultze</p>
 					<p class="text-title-company">Heartland Tank Services</p>
 					<p class="text-title-company">Regional Sales Project Manager</p>
 				</div>
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:mmurphree@heartlandtankservices.com">
+		<a href="mailto:cschultze@heartlandtankservices.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.png" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">mmurphree@heartlandtankservices.com</p>
+						<p class="text-detail">cschultze@heartlandtankservices.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+18007743230*125">
+		<a href="tel:+18007743230*126">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.png" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(800) 774 3230 *125</p>
+						<p class="text-detail">(800) 774 3230 *126</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 	
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+15127532967">
+		<a href="tel:+1-612-283-0249">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-cell.png" alt="cell Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail"> 1 (512) 753-2967</p>
+						<p class="text-detail"> 1 (612) 283-0249</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -144,7 +144,7 @@
 	</section>
 	
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.linkedin.com/in/matt-murphree-7570a893">
+		<a href="https://www.linkedin.com/in/chrisschultzemba/>
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
