--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-email.png" alt="Email Icon"">
+						<img src="icon-email.png" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">cschultze@heartlandtankservices.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -59,13 +59,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-phone.png" alt="Phone Icon"">
+						<img src="icon-phone.png" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">(800) 774 3230 *126</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -77,13 +77,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-cell.png" alt="cell Icon"">
+						<img src="icon-cell.png" alt="cell Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail"> 1 (612) 283-0249</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -94,13 +94,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-website.png" alt="Website Icon"">
+						<img src="icon-website.png" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">heartlandtankservices.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -112,13 +112,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-address.png" alt="Address Icon"">
+						<img src="icon-address.png" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">5200 S Hattie Ave, Oklahoma City, OK 73129</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -130,13 +130,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-facebook.png" alt="Facebook Icon"">
+						<img src="icon-facebook.png" alt="Facebook Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">facebook.com/API650Tanks</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -148,13 +148,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-linkedin.png" alt="LinkedIn Icon"">
+						<img src="icon-linkedin.png" alt="LinkedIn Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">linkedin.com/in/matt-murphree-7570a893/</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
