--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 	</section>
 	
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.linkedin.com/in/chrisschultzemba/">
+		<a href="https://www.linkedin.com/in/chrisschultzemba">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
