--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<img src="icon-cell.png" alt="cell Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail"> 1 (612) 283-0249</p>
+						<p class="text-detail"> (612)283-0249</p>
 					</div>
 					<div class="col">
 						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
